[project]
name = "delaybot"
version = "0.1.0"
description = ""
authors = [
    {name = "RPleshkov",email = "iamromanpleshkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "nats-py (>=2.9.0,<3.0.0)",
    "environs (>=14.1.1,<15.0.0)",
    "ormsgpack (>=1.8.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
